# mqttcmdsrv

./: CMakeLists.txt  README.md  mqttcmdsrv.conf  mqttcmdtrig.json
src/: mqttcmdsrv.cpp
